src/objects/LoggerConfig__c.object
<CustomObject>
    <fields>
        <fullName>Log_Class_Name__c</fullName>
        <label>Log Class Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <label>Log Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Days_Log__c</fullName>
        <label>Max Days Log</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Log_Messages_Per_Logger__c</fullName>
        <label>Max Log Messages Per Logger</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Loggers__c</fullName>
        <label>Max Loggers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Logger Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Logger Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logger Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>